# cypherctf-bot

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  bot.py  challenges.py  pyproject.toml  requirements.txt  setup.py  test_bot.py
.github/workflows/: test.yml
tests/: test_challenges.py
