[build-system]
requires = ['setuptools>=45', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 100
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.coverage.run]
source = ['.']
omit = ['tests/*', 'setup.py', 'pyproject.toml']

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'def __repr__',
    'if self.debug:',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
    'pass',
    'raise ImportError',
]
ignore_errors = true
omit = ['tests/*', 'setup.py', 'pyproject.toml'] 